[workspace]
resolver = "2"
members = [
  "header-chain",
  "final-circuit",
]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[patch.crates-io]
risc0-sys={ git = "https://github.com/fiamma-chain/risc0", branch = "bitvm-1.2.0"}
risc0-circuit-recursion-sys = { git = "https://github.com/fiamma-chain/risc0", branch = "bitvm-1.2.0"}
risc0-core = { git = "https://github.com/fiamma-chain/risc0", branch = "bitvm-1.2.0"}
